# jjcat

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ESCALATION_POLICY.md  HANDOFF.md  PRODUCT.md  PUBLICATION.md  REPO_MANIFEST.yaml  agent-harness.md  completed-milestones.md  roadmap.md  status.md
docs/todo-p0-foundation/: open-questions.md  spec.md
docs/todo-p1-multi-repository-cockpit/: open-questions.md  spec.md
docs/todo-p2-cockpit-information-architecture/: open-questions.md  spec.md
docs/todo-p2-graph-and-diff/: open-questions.md  spec.md
docs/todo-p3-safe-shaping/: open-questions.md  spec.md
scripts/: check-agent-harness-interface.sh  check-publication-boundary.py  check-repository-contract.py  check.sh  finalize-change.sh  start-work.sh
src/: App.tsx  bridge.ts  demo.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  domain.rs  driver.rs  handoff.rs  lib.rs  main.rs  mutation.rs  process.rs  registry.rs  ssh_config.rs
src-tauri/tests/: driver_integration.rs  mutation_integration.rs  ssh_smoke.rs
src-tauri/tests/fixtures/: registry-v0.json  registry-v1.json  registry-v2.json
src/components/: BookmarkLabels.tsx  Brand.tsx  ChangeWorkspace.tsx  DiffViewer.tsx  MutationDialog.tsx  OperationLogPanel.tsx  RepositoryQuickSwitcher.tsx
src/lib/: bookmarks.test.ts  bookmarks.ts  dag.ts  (+15 more)
